--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
   "name": "mda-khi/number-to-word",
   "version": "1.0.0",
   "scripts": {
-    "tests": "./vendor/bin/phpunit tests",
-    "test:dox": "./vendor/bin/phpunit --testdox tests"
+    "test": "./vendor/bin/phpunit test",
+    "test:dox": "./vendor/bin/phpunit --testdox test"
   },
   "license": "",
   "autoload": {
@@ -21,12 +21,12 @@
   ],
   "repositories": [
     {
-      "type": "composer",
-      "url": "http://packages.example.com"
+      "type": "git",
+      "url": "https://github.com/md-akhi/NumbersToWords-php"
     },
     {
       "type": "vcs",
-      "url": "https://github.com/md-akhi/"
+      "url": "https://github.com/md-akhi/NumbersToWords-php"
     }
   ],
   "autoload-dev": {
@@ -34,8 +34,7 @@
       "NumbersToWordsPhp\\Test\\": "test/"
     }
   },
-  "require": {},
   "require-dev": {
-    "phpunit/phpunit": "^9"
+    "phpunit/phpunit": "9"
   }
 }
